force-app/main/default/objects/Zahlung__c/Zahlung__c.object-meta.xml
<CustomObject>
    <label>Zahlung</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zahlungen</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>