force-app/main/default/objects/Zahlung__c/fields/Organisationspunkt__c.field-meta.xml
<CustomField>
    <fullName>Organisationspunkt__c</fullName>
    <label>Organisationspunkt</label>
    <referenceTo>Organisationspunkt__c</referenceTo>
    <relationshipLabel>Zahlungen</relationshipLabel>
    <relationshipName>Zahlung</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>