force-app/main/default/objects/Zahlung__c/fields/Teilnehmer__c.field-meta.xml
<CustomField>
    <fullName>Teilnehmer__c</fullName>
    <label>Teilnehmer</label>
    <referenceTo>Teilnehmer__c</referenceTo>
    <relationshipName>Z_Teilnehmer</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>