force-app/main/default/objects/Zahlung__c/fields/Vorschuss__c.field-meta.xml
<CustomField>
    <fullName>Vorschuss__c</fullName>
    <label>Vorschuss</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>