force-app/main/default/objects/Zahlung__c/fields/Zahlbetrag__c.field-meta.xml
<CustomField>
    <fullName>Zahlbetrag__c</fullName>
    <label>Zahlbetrag</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>