force-app/main/default/objects/Zahlung__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Organisationspunkt__c</columns>
    <columns>Reise__c</columns>
    <columns>Teilnehmer__c</columns>
    <columns>Zahlbetrag__c</columns>
    <columns>Vorschuss__c</columns>
    <filterScope>Everything</filterScope>
    <label>Alle</label>
</ListView>